--- a/cs3043/index.html
+++ b/cs3043/index.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<title>CS 3043 Website</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-</style>
-</head>
-<body>
+  <head>
+    <title>CS 3043 Website</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <style>
+      body {
+        font-family: Arial, Helvetica, sans-serif;
+        margin: 0;
+      }
+      
+      .header {
+        padding: 80px;
+        text-align: center;
+        backround: #1abc9c;
+        color: white;
+      }
 
-<h1>CS 3043 Website</h1>
-<p>A website created by me.</p>
-
-</body>
+      .header h1 {
+        font-size: 40px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="header">
+      <h1>CS 3043 Website</h1>
+      <p>A website created by me.</p>
+    </div>
+  </body>
 </html>
