--- a/cs3043/index.html
+++ b/cs3043/index.html
@@ -14,7 +14,7 @@
       .header {
         padding: 80px;
         text-align: center;
-        backround: #1abc9c;
+        background: #1abc9c;
         color: white;
       }
 
