--- a/cs3043/index.html
+++ b/cs3043/index.html
@@ -14,7 +14,7 @@
       .header {
         padding: 80px;
         text-align: center;
-        background: #1abc9c;
+        background: #aaa;
         color: white;
       }
 
@@ -25,8 +25,8 @@
   </head>
   <body>
     <div class="header">
-      <h1>CS 3043 Website</h1>
-      <p>A website created by me.</p>
+      <h1>CS 3043 Project Group Website</h1>
+      <p>(Currently under development)</p>
     </div>
   </body>
 </html>
