--- a/cs3043/index.html
+++ b/cs3043/index.html
@@ -1,32 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>CS 3043 Website</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <style>
-      body {
-        font-family: Arial, Helvetica, sans-serif;
-        margin: 0;
-      }
-      
-      .header {
-        padding: 80px;
-        text-align: center;
-        background: #aaa;
-        color: white;
+
+<head>
+  <title>CS 3043 Website</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <style>
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+      margin: 0;
+    }
+
+    .header {
+      padding: 30px 0 0 0;
+      text-align: center;
+      background: #aaa;
+      color: #fff;
+      width: 100%;
+      height: 200px;
+      position: fixed;
+    }
+
+    .header h1 {
+      font-size: 40px;
+    }
+
+    .navbar {
+      width: 100%;
+      position: fixed;
+      overflow: hidden;
+      background-color: #333;
+      margin: 200px 0 0 0;
+    }
+
+    .navbar a {
+      height: 40px;
+      float: left;
+      display: flex;
+      color: #fff;
+      text-align: center;
+      padding: 0 20px;
+      text-decoration: none;
+      align-items: center;
+    }
+
+    .navbar a.right {
+      float: right;
+    }
+
+    .navbar a:hover {
+      background-color: #ddd;
+      color: #000;
+    }
+
+    .row {
+      display: flex;
+      flex-wrap: wrap;
+      padding: 240px 0 0 0;
+    }
+
+    .side {
+      flex: 0%;
+      background-color: #aaa;
+      padding: 20px;
+    }
+
+    .main {
+      flex: 100%;
+      background-color: #fff;
+      padding: 20px;
+    }
+
+    .section {
+      display: none;
+    }
+
+    #section-1 {
+      display: inherit;
+    }
+  </style>
+
+  <script>
+    function openSection(section) {
+      let sectionList = document.querySelectorAll('.section');
+
+      for (let i = 0; i < sectionList.length; i++) {
+        sectionList[i].style.display = 'none';
       }
 
-      .header h1 {
-        font-size: 40px;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="header">
-      <h1>CS 3043 Project Group Website</h1>
-      <p>(Currently under development)</p>
+      document.getElementById(section).style.display = 'inherit';
+    }
+  </script>
+</head>
+
+<body>
+  <div class="header">
+    <h1>CS 3043 Project Group Website</h1>
+    <p>(Currently under development)</p>
+  </div>
+
+  <div class="navbar">
+    <a href="#" onclick="openSection('section-1')">Movie Summary</a>
+    <a href="#" onclick="openSection('section-2')">Course Topics</a>
+    <a href="#" onclick="openSection('section-3')">Computing Technologies</a>
+    <a href="#" onclick="openSection('section-4')">Computing Plotline</a>
+    <a href="#" onclick="openSection('section-5')">Author's Intent</a>
+    <a href="#" onclick="openSection('section-6')">Societal Conclusions</a>
+    <a href="#" class="right" onclick="openSection('section-7')">Project Group Info</a>
+  </div>
+
+  <div class="row">
+    <!--<div class="side">...</div>-->
+    <div class="main">
+      <div id="section-1" class="section">
+        <h2>Movie Summary</h2>
+        <h5>Description</h5>
+        <p>Text</p>
+      </div>
+      <div id="section-2" class="section">
+        <h2>Course Topics</h2>
+        <h5>Description</h5>
+        <p>Text</p>
+      </div>
+      <div id="section-3" class="section">
+        <h2>Computing Technologies</h2>
+        <h5>Description</h5>
+        <p>Text</p>
+      </div>
+      <div id="section-4" class="section">
+        <h2>Computing Plotline</h2>
+        <h5>Description</h5>
+        <p>
+          Text
+        </p>
+      </div>
+      <div id="section-5" class="section">
+        <h2>Author's Intent</h2>
+        <h5>Description</h5>
+        <p>
+          Text
+        </p>
+      </div>
+      <div id="section-6" class="section">
+        <h2>Societal Conclusions</h2>
+        <h5>Description</h5>
+        <p>
+          Text
+        </p>
+      </div>
+      <div id="section-7" class="section">
+        <h2>Project Group Info</h2>
+        <h5>Description</h5>
+        <p>
+          Text
+        </p>
+      </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
