--- a/cs3043/index.html
+++ b/cs3043/index.html
@@ -69,7 +69,7 @@
     .main {
       flex: 100%;
       background-color: #fff;
-      padding: 20px;
+      padding: 120px 20px 20px;
     }
 
     .section {
