--- a/cs3043/index.html
+++ b/cs3043/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>CS 3043 Website</title>
+  <title>CS 3043 Project: Children of Men</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -96,8 +96,8 @@
 
 <body>
   <div class="header">
-    <h1>CS 3043 Project Group Website</h1>
-    <p>(Currently under development)</p>
+    <h1>CS 3043 Project: Children of Men</h1>
+    <p>(Website currently under development.)</p>
   </div>
 
   <div class="navbar">
@@ -115,18 +115,82 @@
     <div class="main">
       <div id="section-1" class="section">
         <h2>Movie Summary</h2>
-        <h5>Description</h5>
-        <p>Text</p>
+        <!--<h5>Description</h5>-->
+        <p>
+          In Children of Men, the world is reeling from nearly two decades of global infertility, pushing humanity to the brink of extinction. As societies collapse and governments turn authoritarian, Britain becomes a militarized police state that rounds up refugees and enforces strict surveillance and control.
+        </p>
+        <p>
+          Theo, a former activist, is thrust back into the resistance when he's asked to help a young, miraculously pregnant refugee named Kee escape the country. As the last known hope for the survival of humankind, Kee becomes the target of warring factions seeking to use her child for political gain.
+        </p>
+        <p>
+          Forced to navigate through a dystopian world filled with violence, propaganda, and mistrust, Theo must confront his past and rediscover his sense of purpose. As he grows closer to Kee and begins to understand the importance of her survival, he risks everything to help her reach safety, offering humanity one last chance at survival.
+        </p>
       </div>
       <div id="section-2" class="section">
         <h2>Course Topics</h2>
-        <h5>Description</h5>
-        <p>Text</p>
+        <h5>Chapter 3 - Networked Communications</h5>
+        <p>
+          - The state uses controlled messaging and digital broadcasts to manipulate public opinion.
+          <br>- Rebels rely on secure, often analog, communication to avoid surveillance.
+        </p>
+        <h5>Chapter 4 - Intellectual Property</h5>
+        <p>
+          - Artistic and cultural works survive in isolation, commodified and hoarded by elites like Jasper and the Ark of the Arts.
+          <br>- Creativity is seen as nostalgic rather than revolutionary in a world without youth.          
+        </p>
+        <h5>Chapter 5 - Information Privacy</h5>
+        <p>
+          - Citizens and refugees are subjected to biometric ID scans, violating personal autonomy.
+          <br>- Surveillance is normalized, with private movements constantly tracked.
+          <br>- Personal data becomes a tool for exclusion and state control.
+        </p>
+        <h5>Chapter 6 - Privacy and the Government</h5>
+        <p>
+          - The government weaponizes surveillance to suppress dissent and monitor fertility.
+          <br>- Refugees are stripped of all privacy and treated as dangerous non-persons.
+          <br>- Theo and Kee must hide from constant government tracking to stay alive.
+        </p>
+        <h5>Chapter 7 - Computer and Network Security</h5>
+        <p>
+          - The rebel group must protect sensitive information about Kee's pregnancy from digital discovery.
+          <br>- The state's digital infrastructure is used to maintain total control over borders and identities.
+        </p>
+        <h5>Chapter 8 - Computer Reliability</h5>
+        <p>
+          - Critical systems like transportation and security checkpoints remain intact despite societal collapse, showing over-reliance on automated infrastructure.
+          <br>- The reliability of state systems serves authoritarian goals rather than public service.
+        </p>
+        <h5>Chapter 9 - Professional Ethics</h5>
+        <p>
+          - Medical professionals who help Kee are acting against legal orders, upholding ethical responsibilities over policy.
+          <br>- Journalists, scientists, and aid workers are shown either complicit or exiled for choosing truth over power.
+          <br>- Theo embodies the ethical transformation of a bystander becoming morally accountable.
+        </p>
+        <h5>Chapter 10 - Automation and Globalization</h5>
+        <p>
+          - The refugee crisis depicted is a direct result of failed global systems and conflict automation.
+          <br>- Britain's isolationism reflects backlash against globalization amid mass migration.
+          <br>- The erosion of global cooperation and automated bureaucracy leads to technocratic authoritarianism.
+        </p>
       </div>
       <div id="section-3" class="section">
         <h2>Computing Technologies</h2>
-        <h5>Description</h5>
-        <p>Text</p>
+        <h5>1. Fertility Testing and Medical Scanners</h5>
+        <p>Usage: Depicted through advanced fetal imaging and pregnancy verification.</p>
+        <h5>2. Surveillance and Security Technology</h5>
+        <p>Usage: Drones, facial recognition, CCTV, military checkpoints, and ID verification.</p>
+        <h5>3. Military and Police Drones</h5>
+        <p>Usage: Seen patrolling refugee camps and cities, monitoring civilians and rebels.</p>
+        <h5>4. Holographic and Digital Advertising</h5>
+        <p>Usage: Displayed in the background (e.g., buses and urban streets), showcasing propaganda and commercialism.</p>
+        <h5>5. Armored and Futuristic Vehicles</h5>
+        <p>Usage: Reinforced military vans, retrofitted buses, and armored convoys.</p>
+        <h5>6. Communication Technology (e.g., Video Calling, Messaging)</h5>
+        <p>Usage: Brief but present in rebel communications and state media.</p>
+        <h5>7. Refugee Containment and Tracking Systems</h5>
+        <p>Usage: Barcoded IDs, cages, and biometric checks.</p>
+        <h5>8. Digital News and Government Propaganda Screens</h5>
+        <p>Usage: Broadcasts in public spaces warn citizens and promote nationalism.</p>
       </div>
       <div id="section-4" class="section">
         <h2>Computing Plotline</h2>
@@ -137,24 +201,31 @@
       </div>
       <div id="section-5" class="section">
         <h2>Author's Intent</h2>
-        <h5>Description</h5>
+        <!--<h5>Description</h5>-->
         <p>
-          Text
+          Alfonso Cuarón uses Children of Men to deliver a powerful critique of modern society's descent into apathy, authoritarianism, and dehumanization during times of crisis. His film's focus centers on exposing how fear and instability allow governments to strip away human rights under the guise of order and security. The mass infertility crisis is less a plot device and more a metaphor for a spiritually barren world one that has lost hope, empathy, and purpose. Britain's surveillance state and refugee internment camps mirror real-world policies of exclusion and control, warning against the normalization of cruelty. Cuarón's grim, immersive realism forces viewers to confront the consequences of indifference, highlighting the urgent need to preserve humanity in both policy and spirit.
         </p>
       </div>
       <div id="section-6" class="section">
         <h2>Societal Conclusions</h2>
-        <h5>Description</h5>
-        <p>
-          Text
-        </p>
+        <h5>Claims:</h5>
+        <h5>1. Reproductive Technology Must Be Regulated to Protect Bodily Autonomy and Dignity</h5>
+        <p>- Medical technologies related to fertility should not be exploited to control or commodify the human body.</p>
+        <h5>2. Mass Surveillance Technologies Threaten Human Rights and Democratic Freedoms</h5>
+        <p>- The widespread use of surveillance for population control undermines civil liberties and deepens authoritarian power.</p>
+        <h5>3. Immersive Advertising and Propaganda Tools Can Distort Truth and Exploit Trauma</h5>
+        <p>- The use of holographic and digital advertising by the state risks normalizing propaganda and manipulating public perception.</p>
       </div>
       <div id="section-7" class="section">
         <h2>Project Group Info</h2>
-        <h5>Description</h5>
-        <p>
-          Text
-        </p>
+        <h5>Course:</h5>
+        <p>Worcester Polytechnic Institute, D-Term 2025</p>
+        <p>CS 3043 - Social Implications of Information Processing</p>
+        <h5>Group Members:</h5>
+        <p>Joshua Bearfield (jbearfield@wpi.edu)</p>
+        <p>Alexander Kirkman (askirkman@wpi.edu)</p>
+        <p>Dylan Serreyn (dsserreyn@wpi.edu)</p>
+        <p>Forrest Welty (fswelty@wpi.edu)</p>
       </div>
     </div>
   </div>
