--- a/cs3043/index.html
+++ b/cs3043/index.html
@@ -109,6 +109,29 @@
 
   <div class="row">
     <div class="main">
+      <div id="section-1" class="section">
+        <h2>Movie Summary</h2>
+        <p>
+          In Children of Men, the world is reeling from nearly two decades of global infertility, pushing humanity to the brink of extinction. As societies collapse and governments turn authoritarian, Britain becomes a militarized police state that rounds up refugees and enforces strict surveillance and control.
+        </p>
+        <p>
+          Theo, a former activist, is thrust back into the resistance when he's asked to help a young, miraculously pregnant refugee named Kee escape the country. As the last known hope for the survival of humankind, Kee becomes the target of warring factions seeking to use her child for political gain.
+        </p>
+        <p>
+          Forced to navigate through a dystopian world filled with violence, propaganda, and mistrust, Theo must confront his past and rediscover his sense of purpose. As he grows closer to Kee and begins to understand the importance of her survival, he risks everything to help her reach safety, offering humanity one last chance at survival.
+        </p>
+      </div>
+
+      <div id="section-2" class="section">
+        <h2>Course Topics</h2>
+        <!-- Include Course Topics here as shown in your original post -->
+      </div>
+
+      <div id="section-3" class="section">
+        <h2>Computing Technologies</h2>
+        <!-- Include Computing Technologies section here as shown in your original post -->
+      </div>
+
       <div id="section-4" class="section">
         <h2>Computing Plotline</h2>
         <h5>Timeline of Computing Technologies in the Film</h5>
@@ -141,8 +164,27 @@
         <p><strong>Final Scene (~1:50)</strong><br>
         <em>Hope vs Tech</em>: Kee and the baby escape via boat—a low-tech method symbolic of renewal in contrast to the oppressive digital landscape.</p>
       </div>
+
+      <div id="section-5" class="section">
+        <h2>Author's Intent</h2>
+        <!-- Include full Author’s Intent text here -->
+      </div>
+
+      <div id="section-6" class="section">
+        <h2>Societal Conclusions</h2>
+        <!-- Include Societal Conclusions section here -->
+      </div>
+
+      <div id="section-7" class="section">
+        <h2>Project Group Info</h2>
+        <p>Worcester Polytechnic Institute, D-Term 2025</p>
+        <p>CS 3043 - Social Implications of Information Processing</p>
+        <p>Joshua Bearfield (jbearfield@wpi.edu)</p>
+        <p>Alexander Kirkman (askirkman@wpi.edu)</p>
+        <p>Dylan Serreyn (dsserreyn@wpi.edu)</p>
+        <p>Forrest Welty (fswelty@wpi.edu)</p>
+      </div>
     </div>
   </div>
 </body>
-
 </html>
