--- a/cs3043/index.html
+++ b/cs3043/index.html
@@ -84,9 +84,11 @@
   <script>
     function openSection(section) {
       let sectionList = document.querySelectorAll('.section');
+
       for (let i = 0; i < sectionList.length; i++) {
         sectionList[i].style.display = 'none';
       }
+
       document.getElementById(section).style.display = 'inherit';
     }
   </script>
@@ -95,6 +97,7 @@
 <body>
   <div class="header">
     <h1>CS 3043 Project: Children of Men</h1>
+    <p>(Website currently under development.)</p>
   </div>
 
   <div class="navbar">
@@ -108,9 +111,11 @@
   </div>
 
   <div class="row">
+    <!--<div class="side">...</div>-->
     <div class="main">
       <div id="section-1" class="section">
         <h2>Movie Summary</h2>
+        <!--<h5>Description</h5>-->
         <p>
           In Children of Men, the world is reeling from nearly two decades of global infertility, pushing humanity to the brink of extinction. As societies collapse and governments turn authoritarian, Britain becomes a militarized police state that rounds up refugees and enforces strict surveillance and control.
         </p>
@@ -121,64 +126,102 @@
           Forced to navigate through a dystopian world filled with violence, propaganda, and mistrust, Theo must confront his past and rediscover his sense of purpose. As he grows closer to Kee and begins to understand the importance of her survival, he risks everything to help her reach safety, offering humanity one last chance at survival.
         </p>
       </div>
-
       <div id="section-2" class="section">
         <h2>Course Topics</h2>
-        <!-- Include Course Topics here as shown in your original post -->
+        <h5>Chapter 3 - Networked Communications</h5>
+        <p>
+          - The state uses controlled messaging and digital broadcasts to manipulate public opinion.
+          <br>- Rebels rely on secure, often analog, communication to avoid surveillance.
+        </p>
+        <h5>Chapter 4 - Intellectual Property</h5>
+        <p>
+          - Artistic and cultural works survive in isolation, commodified and hoarded by elites like Jasper and the Ark of the Arts.
+          <br>- Creativity is seen as nostalgic rather than revolutionary in a world without youth.          
+        </p>
+        <h5>Chapter 5 - Information Privacy</h5>
+        <p>
+          - Citizens and refugees are subjected to biometric ID scans, violating personal autonomy.
+          <br>- Surveillance is normalized, with private movements constantly tracked.
+          <br>- Personal data becomes a tool for exclusion and state control.
+        </p>
+        <h5>Chapter 6 - Privacy and the Government</h5>
+        <p>
+          - The government weaponizes surveillance to suppress dissent and monitor fertility.
+          <br>- Refugees are stripped of all privacy and treated as dangerous non-persons.
+          <br>- Theo and Kee must hide from constant government tracking to stay alive.
+        </p>
+        <h5>Chapter 7 - Computer and Network Security</h5>
+        <p>
+          - The rebel group must protect sensitive information about Kee's pregnancy from digital discovery.
+          <br>- The state's digital infrastructure is used to maintain total control over borders and identities.
+        </p>
+        <h5>Chapter 8 - Computer Reliability</h5>
+        <p>
+          - Critical systems like transportation and security checkpoints remain intact despite societal collapse, showing over-reliance on automated infrastructure.
+          <br>- The reliability of state systems serves authoritarian goals rather than public service.
+        </p>
+        <h5>Chapter 9 - Professional Ethics</h5>
+        <p>
+          - Medical professionals who help Kee are acting against legal orders, upholding ethical responsibilities over policy.
+          <br>- Journalists, scientists, and aid workers are shown either complicit or exiled for choosing truth over power.
+          <br>- Theo embodies the ethical transformation of a bystander becoming morally accountable.
+        </p>
+        <h5>Chapter 10 - Automation and Globalization</h5>
+        <p>
+          - The refugee crisis depicted is a direct result of failed global systems and conflict automation.
+          <br>- Britain's isolationism reflects backlash against globalization amid mass migration.
+          <br>- The erosion of global cooperation and automated bureaucracy leads to technocratic authoritarianism.
+        </p>
       </div>
-
       <div id="section-3" class="section">
         <h2>Computing Technologies</h2>
-        <!-- Include Computing Technologies section here as shown in your original post -->
+        <h5>1. Fertility Testing and Medical Scanners</h5>
+        <p>Usage: Depicted through advanced fetal imaging and pregnancy verification.</p>
+        <h5>2. Surveillance and Security Technology</h5>
+        <p>Usage: Drones, facial recognition, CCTV, military checkpoints, and ID verification.</p>
+        <h5>3. Military and Police Drones</h5>
+        <p>Usage: Seen patrolling refugee camps and cities, monitoring civilians and rebels.</p>
+        <h5>4. Holographic and Digital Advertising</h5>
+        <p>Usage: Displayed in the background (e.g., buses and urban streets), showcasing propaganda and commercialism.</p>
+        <h5>5. Armored and Futuristic Vehicles</h5>
+        <p>Usage: Reinforced military vans, retrofitted buses, and armored convoys.</p>
+        <h5>6. Communication Technology (e.g., Video Calling, Messaging)</h5>
+        <p>Usage: Brief but present in rebel communications and state media.</p>
+        <h5>7. Refugee Containment and Tracking Systems</h5>
+        <p>Usage: Barcoded IDs, cages, and biometric checks.</p>
+        <h5>8. Digital News and Government Propaganda Screens</h5>
+        <p>Usage: Broadcasts in public spaces warn citizens and promote nationalism.</p>
       </div>
-
       <div id="section-4" class="section">
         <h2>Computing Plotline</h2>
-        <h5>Timeline of Computing Technologies in the Film</h5>
-        <p><strong>Opening Scene (~0:00–0:05)</strong><br>
-        <em>Digital News and Government Propaganda Screens</em>: Large screens in public spaces broadcast the death of “Baby Diego” and government messaging.</p>
-
-        <p><strong>Theo Walks Through the City (~0:06–0:10)</strong><br>
-        <em>Holographic and Digital Advertising</em>: 3D ads and digital signage dominate buses and walls.<br>
-        <em>Surveillance and Security Technology</em>: CCTV, drones, and facial recognition monitor civilians.</p>
-
-        <p><strong>Theo at Work (~0:11–0:15)</strong><br>
-        <em>Digital News and Messaging</em>: State-controlled news and updates flow continuously through digital terminals.</p>
-
-        <p><strong>Jasper's Home (~0:25–0:35)</strong><br>
-        <em>Communication Tech</em>: Jasper accesses pirate broadcasts and avoids state surveillance using analog means.</p>
-
-        <p><strong>Kee’s Pregnancy Revealed (~0:45)</strong><br>
-        <em>Fertility Testing and Medical Scanners</em>: Portable scanner reveals Kee’s pregnancy via advanced imaging.</p>
-
-        <p><strong>Journey to Refugee Camp (~1:00–1:20)</strong><br>
-        <em>Refugee Containment and Tracking</em>: Barcoded IDs, cages, biometric systems control refugee movement.<br>
-        <em>Military and Police Drones</em>: Automated aerial surveillance tracks rebel and refugee activities.</p>
-
-        <p><strong>Inside Bexhill Camp (~1:20–1:40)</strong><br>
-        <em>Armored and Futuristic Vehicles</em>: Retrofitted buses and police convoys manage refugee transport and combat situations.</p>
-
-        <p><strong>Climax – Baby Revealed (~1:45)</strong><br>
-        <em>Surveillance Tech and Ceasefire</em>: Soldiers stop fighting at the sight of Kee’s baby, momentarily overriding technological aggression with human awe.</p>
-
-        <p><strong>Final Scene (~1:50)</strong><br>
-        <em>Hope vs Tech</em>: Kee and the baby escape via boat—a low-tech method symbolic of renewal in contrast to the oppressive digital landscape.</p>
+        <h5>Description</h5>
+        <p>
+          Text
+        </p>
       </div>
-
       <div id="section-5" class="section">
         <h2>Author's Intent</h2>
-        <!-- Include full Author’s Intent text here -->
+        <!--<h5>Description</h5>-->
+        <p>
+          Alfonso Cuarón uses Children of Men to deliver a powerful critique of modern society's descent into apathy, authoritarianism, and dehumanization during times of crisis. His film's focus centers on exposing how fear and instability allow governments to strip away human rights under the guise of order and security. The mass infertility crisis is less a plot device and more a metaphor for a spiritually barren world one that has lost hope, empathy, and purpose. Britain's surveillance state and refugee internment camps mirror real-world policies of exclusion and control, warning against the normalization of cruelty. Cuarón's grim, immersive realism forces viewers to confront the consequences of indifference, highlighting the urgent need to preserve humanity in both policy and spirit.
+        </p>
       </div>
-
       <div id="section-6" class="section">
         <h2>Societal Conclusions</h2>
-        <!-- Include Societal Conclusions section here -->
+        <h5>Claims:</h5>
+        <h5>1. Reproductive Technology Must Be Regulated to Protect Bodily Autonomy and Dignity</h5>
+        <p>- Medical technologies related to fertility should not be exploited to control or commodify the human body.</p>
+        <h5>2. Mass Surveillance Technologies Threaten Human Rights and Democratic Freedoms</h5>
+        <p>- The widespread use of surveillance for population control undermines civil liberties and deepens authoritarian power.</p>
+        <h5>3. Immersive Advertising and Propaganda Tools Can Distort Truth and Exploit Trauma</h5>
+        <p>- The use of holographic and digital advertising by the state risks normalizing propaganda and manipulating public perception.</p>
       </div>
-
       <div id="section-7" class="section">
         <h2>Project Group Info</h2>
+        <h5>Course:</h5>
         <p>Worcester Polytechnic Institute, D-Term 2025</p>
         <p>CS 3043 - Social Implications of Information Processing</p>
+        <h5>Group Members:</h5>
         <p>Joshua Bearfield (jbearfield@wpi.edu)</p>
         <p>Alexander Kirkman (askirkman@wpi.edu)</p>
         <p>Dylan Serreyn (dsserreyn@wpi.edu)</p>
@@ -187,4 +230,5 @@
     </div>
   </div>
 </body>
+
 </html>
